--- a/portofolio/src/app/globals.css
+++ b/portofolio/src/app/globals.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
+@tailwind utilities;
+
 :root {
-  --background: #ffffff;
+  --background: #9e4949;
   --foreground: #171717;
 }
 
@@ -15,7 +17,7 @@
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
-    --foreground: #ededed;
+    --foreground: #d77e7e;
   }
 }
 
@@ -23,4 +25,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+html {
+  scroll-behavior: smooth;
 }
